# bmi-example-cxx-grpc4bmi

./: Dockerfile  README.md
.github/workflows/: release.yml  test.yml
examples/: README.md  requirements.txt  run-model-through-grpc4bmi.ipynb  run-model-through-grpc4bmi.py
images/conda-base/: Dockerfile  README.md
images/conda-base/server/: CMakeLists.txt
images/ewatercycle-base/: Dockerfile
images/source-base/: Dockerfile  README.md
images/source-base/server/: CMakeLists.txt
server/: CMakeLists.txt  heatcxx-grpc4bmi-server.cxx
